--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "@jeefo/fs": "0.0.1",
     "@jeefo/utils": "0.0.6",
+    "body-parser": "^1.19.0",
     "express": "4.17.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "morgan": "^1.10.0"
+  }
 }
