--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@jeefo/fs": "0.0.1",
     "@jeefo/utils": "0.0.6",
     "body-parser": "^1.19.0",
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
